# pathology_report_segmentation

./: .gitignore  Makefile  README.md  constants_darwin_pathology.py  create_pathology_summary_table.py  darwin_pathology.py  environment.yml  nextflow.config  pipeline_main.nf  pyproject.toml  run.sh  utils_pathology.py
annotations/: cbio_timeline_gleason.py  cbio_timeline_pdl1.py  key_value_pair_extraction.py  pathology_extract_accession.py  pathology_extract_dop.py  pathology_extract_dop_impact_wrapper.py  pathology_extract_gleason.py  pathology_extract_heme_annotations.py  pathology_extract_mmr.py  pathology_extract_pdl1.py  pathology_extract_surgical_type.py  pathology_id_mapping.py  pathology_impact_summary_dop_annotator.py  pathology_parse_heme_section.py  pathology_parse_heme_section_bm_aspirate_smear.py  pathology_parse_heme_section_bm_biopsy.py  pathology_parse_heme_section_periph_blood.py  pathology_synoptic_logistic_model.py
cbioportal/: specimen_cbioportal_timeline.py
demo/: path_report_segmentation_demo.ipynb
pipeline/: bash_run_python.sh  bash_run_python_minio_and_dbx.sh  bash_run_python_minio_and_dbx_test.sh  bash_run_python_test.sh  cbio_gleason_summary.py  cbio_pdl1_summary.py  cbio_timeline_gleason.py  cbio_timeline_pdl1.py  cbio_timeline_sequencing.py  cbio_timeline_specimen.py  config_loader.py  databricks_config.yaml  databricks_io.py  pipeline_gleason_extraction.py  pipeline_id_mapping.py  pipeline_parse_surgical_reports.py
sandbox/: create_pathology_summary_table.py  gleason_pdl1_timeline_processing.ipynb  key_value_pair_extraction.ipynb  (+4 more)
(+109 files in other folders)
